# Pagina-de-Asistencia-MAC

./: .dockerignore  .env.development.example  .env.example  .env.production.example  .gitignore  Asistencias_Procesadas.xlsx  CHANGELOG_SETUP.md  COMO_INSTALAR_GIT.md  GUIA_DESPLIEGUE.md  GUIA_PRODUCCION.md  IMPORTACION_ASISTENCIAS.md  INSTRUCCIONES_SINCRONIZACION.md  QUICK_START.md  README.md  RESPUESTAS_FAQ.md  RESUMEN_CONFIGURACION.md  RESUMEN_FINAL.md  Registros_Asistencia (1).xlsx  SETUP_COLABORADORES.md  create_backup.ps1  create_backup.sh  create_superuser.sh  docker-compose.dev.yml  docker-compose.yml  export_fixtures.py  install.bat  install.sh  restore_database.ps1  restore_database.sh
backend/: .editorconfig  .env.example  .flake8  .pre-commit-config.yaml  Book7.xlsx  ESTADISTICAS_README.md  LINTING.md  Makefile  add_missing_students.py  analyze_registros.py  attendanceStats.xlsx  auditorio1_21.xlsx  check_event.py  check_events_oct21_11am.py  check_excel_sheets.py  check_missing_students.py  corregir_asistencias.py  crear_reporte_asistencia.py  delete_fiscal_attendances.py  delete_incorrect_fiscal.py  final_summary.py  find_duplicate_attendances.py  find_simultaneous_events.py  init_db.py  load_initial_data.py  login_fix_summary.py  process_attendance.py  process_attendance_book7.py  process_attendance_fiscal.py  process_auditorio1_21.py  process_registros_asistencia.py  pyproject.toml  read_attendance_stats.py  requirements-dev.txt  requirements.txt  test_login.py  test_validation.py  test_validation_v2.py  tox.ini  verificar_correccion_asistencias.py  (+5 more)
backend/attendance/: __init__.py  admin.py  apps.py  models.py  signals.py  urls.py  views.py
backend/attendance/management/commands/: import_attendance.py  recalculate_stats.py
backend/authentication/: admin.py  middleware.py  models.py  serializers.py  urls.py  views.py
backend/authentication/migrations/: 0009_assistantprofile_student.py  0010_merge_20251003_2150.py  0011_auto_create_assistant_permissions.py  0012_systemconfiguration_minutes_after_start_and_more.py  0013_alter_userprofile_user.py  0014_alter_externaluser_account_number_and_more.py
backend/events/: admin.py  models.py  views.py
backend/events/management/commands/: import_events.py
backend/events/migrations/: 0006_alter_event_created_by.py  0007_remove_event_created_by.py
backend/fixtures/: initial_data.json
backend/mac_attendance/: middleware.py  settings.py  settings.py.bak  urls.py  views.py
backend/mac_attendance/settings/: __init__.py  base.py  local.py  production.py
backend/scripts/: format.sh  lint.sh
backend/static/: .gitkeep
backend/templates/: api_docs.html
docker/: 40-create-ssl-certificate.sh  Dockerfile.backend  Dockerfile.backend.dev  Dockerfile.frontend  generate_ssl_certs.sh  nginx.conf  nginx.dev.conf
docs/: ACCESO_ADMIN.md  API_DOCUMENTATION.md  CHANGELOG_FIX.md  COMO_USAR_ESCANER_USB.md  DESARROLLO.md  DOCKER_SETUP.md  ESTRUCTURA_PROYECTO.md  IMPORTACION_DATOS.md  POSTGRESQL_MIGRATION.md  postman_collection.json
frontend/: package-lock.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/services/: api.js
frontend/src/styles/: Dashboard.css  (+2 more)
(+7 files in other folders)
